src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CEO__c</fullName>
        <description>Name of the CEO</description>
        <inlineHelpText>Name of the CEO</inlineHelpText>
        <label>CEO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Advantages__c</fullName>
        <description>The Competitors advantages over our product</description>
        <inlineHelpText>The Competitors advantages over our product</inlineHelpText>
        <label>Competitor Advantages</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <description>Number of Customers the Competitor has</description>
        <inlineHelpText>Number of Customers the Competitor has</inlineHelpText>
        <label># of Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Our_Advantages__c</fullName>
        <description>Our Product or Service Advantages Over the Competitor</description>
        <inlineHelpText>Our Product or Service Advantages Over the Competitor</inlineHelpText>
        <label>Our Advantages</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Percent_of_Marketshare__c</fullName>
        <description>How much of the market they have as customers.</description>
        <inlineHelpText>How much of the market they have as customers.</inlineHelpText>
        <label>Percent of Marketshare</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Selling_Tips__c</fullName>
        <description>Selling Tips against the Competitor</description>
        <inlineHelpText>Selling Tips against the Competitor</inlineHelpText>
        <label>Selling Tips</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Source_of_Customer_Rating__c</fullName>
        <description>Where we obtained the customer rating data</description>
        <inlineHelpText>Where we obtained the customer rating data</inlineHelpText>
        <label>Source of Customer Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <description>Who is buying their product? Enterprise Corps, SMB, Consumers, High end, luxury, affordable, etc</description>
        <inlineHelpText>Who is buying their product/the characteristics of their target buyer.  

Example terms:  Enterprise Corps, SMB, Consumers, High end, luxury, affordable, etc</inlineHelpText>
        <label>Target Market</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Their_Pricing__c</fullName>
        <description>When comparing their pricing to ours, how do they stand vs us?</description>
        <inlineHelpText>When comparing their pricing to ours, how do they stand vs us?</inlineHelpText>
        <label>Their Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Much Higher</fullName>
                </value>
                <value>
                    <fullName>Slightly Higher</fullName>
                </value>
                <value>
                    <fullName>About the Same</fullName>
                </value>
                <value>
                    <fullName>Slightly Lower</fullName>
                </value>
                <value>
                    <fullName>Much Lower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_they_are_better_for__c</fullName>
        <description>The market that is better suited with the competitors product than ours</description>
        <inlineHelpText>The market that is better suited with the competitors product than ours</inlineHelpText>
        <label>Who they are better for</label>
        <type>TextArea</type>
    </fields>
</CustomObject>